--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Landing Page</title>
+</head>
+
+<body>
+        <div class="header">
+
+                <video autoplay loop class="back-video" muted plays-inline>
+                        <source src="video.mp4" type="video/mp4">
+                </video>
+
+                <nav>
+                        <img src="logo.png" alt="logo" class="logo">
+                        <ul>
+                                <li><a href="">Home</a></li>
+                                <li><a href="">Courses</a></li>
+                                <li><a href="">Review</a></li>
+                                <li><a href="">Contact</a></li>
+                        </ul>
+                </nav>
+                <div class="content">
+                        <h1>Learn Anything Online</h1>
+                        <form>
+                                <input type="text" placeholder="&#x270e; Enter Keywood">
+                                <button type="submit">Find Course</button>
+                        </form>
+                        <div class="category-list">
+                                <div class="category">
+                                        <img src="coding.png" alt="coding">
+                                        <p>Web Dev</p>
+                                </div>
+                                <div class="category">
+                                        <img src="excercise.png" alt="excercise">
+                                        <p>Yoga</p>
+                                </div>
+                                <div class="category">
+                                        <img src="guitar.png" alt="guitar">
+                                        <p>Music</p>
+                                </div>
+                                <div class="category">
+                                        <img src="console.png" alt="console">
+                                        <p>Game Dev</p>
+                                </div>
+                                <div class="category">
+                                        <img src="language.png" alt="language">
+                                        <p>Language</p>
+                                </div>
+                        </div>
+                </div>
+        </div>
+
+</body>
+
+</html>
