--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                                 <li><a href="">Courses</a></li>
                                 <li><a href="">Review</a></li>
                                 <li><a href="">Contact</a></li>
+                                <li class="btn">Sign Up</li>
                         </ul>
                 </nav>
                 <div class="content">
