--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
                 <nav>
                         <img src="logo.png" alt="logo" class="logo">
-                        <ul>
+                        <ul class="nav-links">
                                 <li><a href="">Home</a></li>
                                 <li><a href="">Courses</a></li>
                                 <li><a href="">Review</a></li>
